--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -30,6 +30,9 @@
 button {
   transition: all 0.3s;
 }
+.register{
+  background-color: linear-gradient(to bottom right, #2f49a6, white);
+}
 .bg {
   filter: blur(10px);
 }
